--- a/ProyectoFinal_GarroFernando/Views/Estudiantes/Details.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Estudiantes/Details.cshtml
@@ -4,37 +4,6 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
-<div>
-    <h4>Estudiante</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-10">
-            @Html.DisplayNameFor(model => model.Usuario)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Usuario.Apellido1)
-        </dd>
-        <dt class="col-sm-10">
-            @Html.DisplayNameFor(model => model.FechaInscripcion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaInscripcion)
-        </dd>
-        <dt class="col-sm-10">
-            @Html.DisplayNameFor(model => model.Activo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Activo)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
-
 <div class="card mt-5 col-md-6 mx-auto">
     <div class="card-header">
         <h3 class="card-title">Datos del estudiante</h3>
@@ -42,7 +11,7 @@
     <div class="card-body">
         <dl class="row">
             <dt class="col-sm-10">
-                Nombre de usuario:
+                Nombre:
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Usuario.Nombre)
