--- a/ProyectoFinal_GarroFernando/Views/Profesores/Details.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Profesores/Details.cshtml
@@ -10,20 +10,20 @@
     <h4>Profesor</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Usuario)
+        <dt class = "col-sm-10">
+            Nombre:
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Usuario.Apellido1)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Especialidad)
+        <dt class="col-sm-10">
+            Especialidad:
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Especialidad)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Activo)
+        <dt class="col-sm-10">
+            Estado actual:
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Activo)
@@ -33,4 +33,36 @@
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
+</div>
+
+
+<div class="card mt-5 col-md-6 mx-auto">
+    <div class="card-header">
+        <h3 class="card-title">Datos del profesor</h3>
+    </div>
+    <div class="card-body">
+        <dl class="row">
+            <dt class="col-sm-10">
+                Nombre:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Usuario.Apellido1)
+            </dd>
+            <dt class="col-sm-10">
+                Especialidad:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Especialidad)
+            </dd>
+            <dt class="col-sm-10">
+                Estado actual:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Activo)
+            </dd>
+        </dl>
+    </div>
+    <div class="card-footer">
+        <a asp-action="Index" class="btn btn-danger btn-block">Volver a la lista principal</a>
+    </div>
 </div>
