--- a/ProyectoFinal_GarroFernando/Views/Cursos/Edit.cshtml
+++ b/ProyectoFinal_GarroFernando/Views/Cursos/Edit.cshtml
@@ -35,7 +35,7 @@
                     <span asp-validation-for="CarreraId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" />
+                    <input type="submit" value="Salvar datos del curso" class="btn btn-primary btn-block" />
                 </div>
             </form>
             <div class="card-footer">
